Merged frontend